[package]
name = "conjugator"
version = "0.1.0"
edition = "2021"

# Include the anki project as a dependency


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.177", features = ["derive"] }
anki = { git = "https://github.com/ankitects/anki.git" }
anki_proto = { git = "https://github.com/ankitects/anki.git" }
reqwest = "0.11.0"
scraper = "0.17.1"
aws-config = "0.55.3"
aws-sdk-polly = "0.28.0"
tokio = "1.29.1"
url = "2.4.0"